fix margins on showif blocks; prevents horizontal scroll on mobile

--- a/source/style.scss
+++ b/source/style.scss
@@ -576,11 +576,19 @@ select {
 .dashowif, .showif {
   .form-group {
     margin-right: -3rem;
-    margin-bottom: 0;
     margin-left: -3rem;
     padding-right: 1.5rem;
-    padding-bottom: 1rem;
     padding-left: 1.1rem;
+
+    @include media-breakpoint-down(sm) {
+      margin-left: 0.2rem;
+      margin-right: 0.2rem;
+      padding-left: 0.6rem;
+      padding-right: 0;
+    }
+
+    padding-bottom: 1rem;
+    margin-bottom: 0;
     border-left: 4px solid $cyan;
 
     &.da-group-has-error, &.has-error {
